[package]
name = "rng-query"
description = "CLI to use pseudorandomness the easy way"
version = "2.1.0"
edition = "2021"
authors = ["Zheoni <zheoni@outlook.es>"]
license = "MIT"
keywords = ["cli", "rng", "dice"]
categories = ["command-line-utilities"]
repository = "https://github.com/Zheoni/rng-query"
readme = "README.md"

[dependencies]
rand = "0.8.5"
rand_pcg = "0.3.1"
regex = "1.10.3"
owo-colors = "4.0.0"
# bin
clap = { version = "4.5.1", features = ["cargo"], optional = true }
anstream = { version = "0.6.12", optional = true }

[dev-dependencies]
test-case = "3.1.0"

[features]
default = ["bin"]
bin = ["dep:clap", "dep:anstream"]

[profile.release]
debug = "none"
strip = true

[[bin]]
name = "rq"
path = "src/bin/rq.rs"
required-features = ["bin"]
